DuPont DevSB/src/objects/pse__Timecard_Entry_UI_Personal__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>pse__Additional_Fields__c</fullName>
        <label>Additional Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_project_editable_after_save__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the project or assignment can be changed as long as the timecard &apos;s status is one of the &quot;timecard-edit-status-values/Timecard_edit_status_values__c&quot; values.</description>
        <inlineHelpText>If true the project or assignment can be changed as long as the timecard &apos;s status is one of the &quot;timecard-edit-status-values/Timecard_edit_status_values__c&quot; values.</inlineHelpText>
        <label>Assignment project editable after save</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Assignment_tooltip_fields__c</fullName>
        <defaultValue>&quot;Percent_Allocated__c, Description__c,CreatedDate&quot;</defaultValue>
        <description>The fields to use as tooltip for assignments. Fully-qualified (with namespace if applicable), case-sensitive field names are required</description>
        <inlineHelpText>The fields to use as tooltip for assignments. Fully-qualified (with namespace if applicable), case-sensitive field names are required</inlineHelpText>
        <label>Assignment tooltip fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Billable_Header_Field_Position_Is_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Billable field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</description>
        <inlineHelpText>If the Billable field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
        <label>Billable Header Field Position Is Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Combine_Similar_Timecards__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether timecards with exactly the same combination of week, project, assignment, resource, billable, project, methodology, location, travel are combined on the Timecard Entry page. When this occurs, hours and notes fields are combined and other day-based fields are set to the values of the first timecard row included in an aggregated timecard line.</description>
        <inlineHelpText>Indicates whether timecards with exactly the same combination of week, project, assignment, resource, billable, project, methodology, location, travel are combined on the Timecard Entry page.</inlineHelpText>
        <label>Combine Similar Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_AdditionalFields_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Additional Fields will be copied from previous week timecards.</description>
        <inlineHelpText>If checked Additional Fields will be copied from previous week timecards.</inlineHelpText>
        <label>Copy AdditionalFields From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_ETC_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked ETC field  will be copied from previous week timecards</description>
        <inlineHelpText>If checked ETC field  will be copied from previous week timecards</inlineHelpText>
        <label>Copy ETC From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Hours_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Hour fields like Monday Hours, Tuesday Hours etc  will be copied from previous week timecards</description>
        <inlineHelpText>If checked Hour fields like Monday Hours, Tuesday Hours etc  will be copied from previous week timecards</inlineHelpText>
        <label>Copy Hours From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Locations_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Location Information fields like Location Mon etc  will be copied from previous week timecards</description>
        <inlineHelpText>If checked Location Information fields like Location Mon etc  will be copied from previous week timecards</inlineHelpText>
        <label>Copy Locations From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Methodology_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Methodology field  will be copied from previous week timecards</description>
        <inlineHelpText>If checked Methodology field  will be copied from previous week timecards</inlineHelpText>
        <label>Copy Methodology From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Milestone_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Milestones will be copied from previous week&apos;s timecards</description>
        <inlineHelpText>If checked Milestones will be copied from previous week&apos;s timecards</inlineHelpText>
        <label>Copy Milestone From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Notes_From_Previous_Week__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked Notes will be copied from previous week timecards</description>
        <inlineHelpText>If checked Notes will be copied from previous week timecards</inlineHelpText>
        <label>Copy Notes From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Phase_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Phase field  will be copied from previous week timecards</description>
        <inlineHelpText>If checked Phase field  will be copied from previous week timecards</inlineHelpText>
        <label>Copy Phase From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Schedule_Assignment_Daily_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If set to true, the Copy From Schedule functionality populates the Notes fields for each day on the Timecard if it finds Assignment Daily Notes child records on the Assignment for that day. (default false)</description>
        <inlineHelpText>If set to true, the Copy From Schedule functionality populates the Notes fields for each day on the Timecard if it finds Assignment Daily Notes child records on the Assignment for that day. (default false)</inlineHelpText>
        <label>Copy Schedule Assignment Daily Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Copy_Travel_From_Previous_Week__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked Travel Information fields like Travel Week, Travel Mon etc  will be copied from previous week timecards</description>
        <inlineHelpText>If checked Travel Information fields like Travel Week, Travel Mon etc  will be copied from previous week timecards</inlineHelpText>
        <label>Copy Travel From Previous Week</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Single_Resource_Search_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true and the Resource Lookup popup on the new timecard UI returns only one result, the Resource Lookup popup is automatically closed and the resource field is set to returned resource.</description>
        <inlineHelpText>When true and the Resource Lookup popup on the new timecard UI returns only one result, the Resource Lookup popup is automatically closed and the resource field is set to returned resource.</inlineHelpText>
        <label>Default Single Resource Search Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Default_Week_Offset__c</fullName>
        <label>Default Week Offset</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Default_billable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, billable drop down field on timecard ui will be shown as disabled i.e non-editable by user .</description>
        <inlineHelpText>If true, billable drop down field on timecard ui will be shown as disabled i.e non-editable by user .</inlineHelpText>
        <label>Default billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Disable_cache__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TC UI cache the all assigned assignments/project along with the milestones while it loads. This may lead to salesforce&apos;s viewstate limit, if user have many assignments/projects. Setting this config value to true will minimize this cache.</description>
        <inlineHelpText>TC UI cache the all assigned assignments/project along with the milestones while it loads. This may lead to salesforce&apos;s viewstate limit, if user have many assignments/projects. Setting this config value to true will minimize this cache.</inlineHelpText>
        <label>Disable cache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Empty_lines_to_append_on_add_lines__c</fullName>
        <defaultValue>3</defaultValue>
        <description>These many empty timecard lines will be added, when add lines button will be clicked.</description>
        <inlineHelpText>These many empty timecard lines will be added, when add lines button will be clicked.</inlineHelpText>
        <label>Empty lines to append on add lines</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Empty_timecard_lines_to_append_by_def__c</fullName>
        <defaultValue>5</defaultValue>
        <description>This is the minimum no of lines that will be always available for new timecard entry.</description>
        <inlineHelpText>This is the minimum no of lines that will be always available for new timecard entry.</inlineHelpText>
        <label>Empty timecard lines to append by def</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Billable_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the billable column on the Timecard Entry page is hidden. When true, the column is hidden and the billable checkbox defaults to selected. The default value is false.</description>
        <inlineHelpText>Indicates whether the billable column on the Timecard Entry page is hidden. When true, the column is hidden and the billable checkbox defaults to selected. The default value is false.</inlineHelpText>
        <label>Hide Billable Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Copy_From_Previous_Week_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Copy From Previous Week button on the new timecard UI is hidden. The default value is false.</description>
        <inlineHelpText>Indicates whether the Copy From Previous Week button on the new timecard UI is hidden. The default value is false.</inlineHelpText>
        <label>Hide Copy From Previous Week Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Copy_Previous_Week_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is a duplicate and may be removed in a future release. Please edit the &quot;Hide Copy From Previous Week Button&quot; setting instead.</description>
        <inlineHelpText>This setting is a duplicate and may be removed in a future release. Please edit the &quot;Hide Copy From Previous Week Button&quot; setting instead.</inlineHelpText>
        <label>Hide Copy Previous Week Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Copy_Schedules_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Copy Schedules button on the new timecard UI is hidden. The default value is false.</description>
        <inlineHelpText>Indicates whether the Copy Schedules button on the new timecard UI is hidden. The default value is false.</inlineHelpText>
        <label>Hide Copy Schedules Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Notes_Column__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, the Notes column that normally appears on the Timecard Entry page is hidden. The default value is false.</description>
        <inlineHelpText>When true, the Notes column that normally appears on the Timecard Entry page is hidden. The default value is false.</inlineHelpText>
        <label>Hide Notes Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Save_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Save button on the new timecard UI is hidden. The default value is false.</description>
        <inlineHelpText>Indicates whether the Save button on the new timecard UI is hidden. The default value is false.</inlineHelpText>
        <label>Hide Save Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Submit_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the Submit button on the new timecard UI is hidden. The default value is false.</description>
        <inlineHelpText>Indicates whether the Submit button on the new timecard UI is hidden. The default value is false.</inlineHelpText>
        <label>Hide Submit Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_Timecard_Hours_in_Calculated_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected and Task Time Entry Mode is set to Calculated,  only one row of task hours is displayed. The default value of the checkbox is clear.</description>
        <inlineHelpText>If selected and Task Time Entry Mode is set to Calculated,  only one row of task hours is displayed. The default value of the checkbox is clear.</inlineHelpText>
        <label>Hide Timecard Hours in Calculated Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Hide_View_Edit_Details_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true and Task Time Entry Mode is Current, the View or Edit Details links shown when hovering over a timecard line are hidden. If true and Task Time Entry Mode is not Current, the Notes tab is hidden on the links. The default value is false.</description>
        <inlineHelpText>If true and Task Time Entry Mode is Current, the View or Edit Details links shown when hovering over a timecard line are hidden. If true and Task Time Entry Mode is not Current, the Notes tab is hidden on the links. The default value is false</inlineHelpText>
        <label>Hide View Edit Details Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Holiday_Color_Code__c</fullName>
        <description>The given field/config is used to color-code the date-column-heading for a Work Calendar Holiday for the selected Resource on the Timecard. Config would allow customer to choose color so that they could, for example, have the date column heading &quot;Mon (9/5)&quot; be an alternate color (config could contain color). In this example, Mon. Sept. 5th 2011 is Labor Day, a holiday in most US Work Calendars, so a Resource with the US Work Calendar would see this color feature.</description>
        <inlineHelpText>The given field/config is used to color-code the date-column-heading for a Work Calendar Holiday for the selected Resource on the Timecard UI.</inlineHelpText>
        <label>Holiday Color Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Max_Resource_Hours_Per_Day__c</fullName>
        <description>Maximum number of hours a resource can enter on a single timecard day. If the total number of hours for a resource exceeds this amount on a single timecard day, an error message is displayed.</description>
        <inlineHelpText>Maximum number of hours a resource can enter on a single timecard day. If the total number of hours for a resource exceeds this amount on a single timecard day, an error message is displayed.</inlineHelpText>
        <label>Max Resource Hours Per Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Maximum_Resource_Hours_Per_Week__c</fullName>
        <description>Maximum number of hours a resource can enter for a timecard week. If exceeded, an error message is displayed. Enter a percentage value and symbol, eg. 90%, to specify a maximum percentage of work calendar hours.</description>
        <inlineHelpText>Maximum number of hours a resource can enter for a timecard week. If exceeded, an error message is displayed. Enter a percentage value and symbol, eg. 90%, to specify a maximum percentage of work calendar hours.</inlineHelpText>
        <label>Maximum Resource Hours Per Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Methodology_HeaderField_Position_Is_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Methodology field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</description>
        <inlineHelpText>If the Methodology field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
        <label>Methodology HeaderField Position Is Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Methodology_field_position_is_popup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This config flag determines whether methodology field should be display on notes popup or at front page.</description>
        <inlineHelpText>This config flag determines whether methodology field should be display on notes popup or at front page.</inlineHelpText>
        <label>Methodology field position is popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_Header_Field_Position_Is_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Milestone field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</description>
        <inlineHelpText>If the Milestone field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
        <label>Milestone Header Field Position Is Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Milestone_field_position_is_popup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This config flag determines whether milestone field should be display on notes popup or at front page.</description>
        <inlineHelpText>This config flag determines whether milestone field should be display on notes popup or at front page.</inlineHelpText>
        <label>Milestone field position is popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Minimum_Resource_Hours_Per_Week__c</fullName>
        <description>Minimum number of hours a resource can enter for a timecard week. If weekly hours are lower than this amount, an error message is displayed. Enter a percentage value and symbol, eg. 30%, to specify a minimum percentage of work calendar hours.</description>
        <inlineHelpText>Minimum number of hours a resource can enter for a timecard week. If weekly hours are lower than this amount, an error message is displayed. Enter a percentage value and symbol, eg. 30%, to specify a minimum percentage of work calendar hours.</inlineHelpText>
        <label>Minimum Resource Hours Per Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Nickname_Editable__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true then assignment nickname is editable else not.</description>
        <inlineHelpText>If true then assignment nickname is editable else not.</inlineHelpText>
        <label>Nickname Editable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Note_location_allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If true, location field will be shown in timacard entry note popup dialog</description>
        <inlineHelpText>If true, location field will be shown in timacard entry note popup dialog</inlineHelpText>
        <label>Note location allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Note_primary_location_allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, then primary Location drop-down will be displayed on TC UI.
And &quot;Use Project Location Records&quot; setting will configure whether it will bind to Primary Location picklist or Project Location object.</description>
        <inlineHelpText>If true, then primary Location drop-down will be displayed on TC UI.</inlineHelpText>
        <label>Note primary location allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Phase_Header_Field_Position_Is_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Phase field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</description>
        <inlineHelpText>If the Phase field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
        <label>Phase Header Field Position Is Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Phase_field_position_is_popup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This config flag determines whether phase field should be display on notes popup or at front page.</description>
        <inlineHelpText>This config flag determines whether phase field should be display on notes popup or at front page.</inlineHelpText>
        <label>Phase field position is popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Pre_Populate_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, tasks are pre populated for the selected user and project. The default value of the checkbox is clear.</description>
        <inlineHelpText>If selected, tasks are pre populated for the selected user and project. The default value of the checkbox is clear.</inlineHelpText>
        <label>Pre Populate Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Loc_HeaderField_Position_Is_Left__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Primary Location field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</description>
        <inlineHelpText>If the Primary Location field is configured to be displayed, determines whether it should be displayed to the left or the right of Hours in the timecard header line of the Timecard UI.</inlineHelpText>
        <label>Primary Loc HeaderField Position Is Left</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Primary_Location_field_position_is_popup__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When Note primary location allowed is set to true, determines whether the Primary Location field appears in the Notes section or the timecard line.</description>
        <inlineHelpText>When Note primary location allowed is set to true, determines whether the Primary Location field appears in the Notes section or the timecard line.</inlineHelpText>
        <label>Primary Location field position is popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Proj_assig_dropdown_account_custom_field__c</fullName>
        <description>timecard project/Assignment account drop down display value</description>
        <inlineHelpText>timecard project/Assignment account drop down display value</inlineHelpText>
        <label>Proj assig dropdown account custom field</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_editable_after_save_audit_Notes__c</fullName>
        <defaultValue>&apos;User &lt;user&gt; changed the Project from &lt;oldproject&gt; to &lt;newproject&gt; on &lt;date&gt;&apos;</defaultValue>
        <description>The &quot;Assignment project editable after save&quot; gives user access to change the project/assignment for the saved timecards but this require audit note to be set for timecard.
Audit notes can be set by this config. This config contains four tokens, which will be replaced during update.

The valid token names are as follows:-
&lt;user&gt; - the current user who is performing the action in the TC UI
&lt;date&gt; - today&apos;s date
&lt;oldproject&gt; - the original project name
&lt;newproject&gt; - the new project name

Default value:- User &lt;user&gt; changed the Project from &lt;oldproject&gt; to &lt;newproject&gt; on &lt;date&gt;

Also since the Audit Notes filed on TCH is limited up to 255 characters user should avoid adding a value more then 255 char for this config other wise the time card will not be saved.</description>
        <inlineHelpText>The &quot;Assignment project editable after save&quot; gives user access to change the project/assignment for the saved timecards but this require audit note to be set for timecard. Audit notes can be set by this config.</inlineHelpText>
        <label>Project editable after save audit Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Project_tooltip_fields__c</fullName>
        <defaultValue>&quot;Project_Status__c,Billable_Internal_Hours__c&quot;</defaultValue>
        <description>List of project fields to be shown as tooltip on timecard entry ui.</description>
        <inlineHelpText>List of project fields to be shown as tooltip on timecard entry ui.</inlineHelpText>
        <label>Project tooltip fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Restrict_Task_Based_On_Milestone__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, the tasks that are pre populated are based on the selected milestone. This setting is deselected by default.</description>
        <inlineHelpText>If selected, the tasks that are pre populated are based on the selected milestone. This setting is deselected by default.</inlineHelpText>
        <label>Restrict Task Based On Milestone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_assignment_tooltip_fields__c</fullName>
        <defaultValue>&quot;Percent_Allocated__c, Description__c,CreatedDate&quot;</defaultValue>
        <description>API names of assignment fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</description>
        <inlineHelpText>API names of assignment fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</inlineHelpText>
        <label>Schedule Assignment Tooltip Fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_grid_weekend_delta__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Config value will be used to show the schedules for no of weeks ahead of timecard weekend. Possible value for config will be 0, 1, 2 so on. If value = 0, Schedule grid will show schedules zero week ahead of timecard i.e current week and next week.</description>
        <label>Schedule grid weekend delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Schedule_project_tooltip_fields__c</fullName>
        <defaultValue>&quot;Project_Status__c,Billable_Internal_Hours__c&quot;</defaultValue>
        <description>API names of project fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</description>
        <inlineHelpText>API names of project fields to be shown when hovering over the tooltip icon in the Schedule section of a timecard.</inlineHelpText>
        <label>Schedule Project Tooltip Fields</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_Alert_For_NonZero_HolidayHours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Given config is used to show alert if non zero value in entered on the timecard section for the day marked as holiday (having zero hours) in the selected Resource work calendar.</description>
        <inlineHelpText>Given config is used to show alert if non zero value in entered on the timecard section for the day marked as holiday (having zero hours) in the selected Resource work calendar.</inlineHelpText>
        <label>Show Alert For NonZero HolidayHours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Alert_For_NonZero_WeekendHours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Given config is used to show alert if non zero value in entered on the schedule grid section for the day having zero hours in the selected Resource work calendar days pattern.</description>
        <inlineHelpText>Given config is used to show alert if non zero value in entered on the schedule grid section for the day having zero hours in the selected Resource work calendar days pattern.</inlineHelpText>
        <label>Show Alert For NonZero WeekendHours</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Easy_Entry_Popup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the easy entry popup appears on the Time Entry page when you double-click an editable hour cell on a timecard row or press the DOWN ARROW key while that cell is selected.</description>
        <inlineHelpText>Indicates whether the easy entry popup appears on the Time Entry page when you double-click an editable hour cell on a timecard row or press the DOWN ARROW key while that cell is selected.</inlineHelpText>
        <label>Show Easy Entry Popup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Milestone_As_Field__c</fullName>
        <description>Contains field whose value will be shown on timecard UI milestone drop down list.   If these are missing/null, the TC UI just continues to show the Milestone name fields of the available Milestones in the drop-down list.  No lookup __r references are supported, only fields directly on the Milestone can be used.</description>
        <inlineHelpText>Contains field whose value will be shown on TC UI milestone drop down list.   If these are missing/null, the TC UI just continues to show the Milestone name fields of the available Milestones in the drop-down list.  No lookup __r references are supp</inlineHelpText>
        <label>Show Milestone As Field</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Show_ProjectName_Assignment_Dropdown__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to control the display of assignment project name value in the assignment display name on TC project/assignment overlay.</description>
        <label>Show ProjectName Assignment Dropdown</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Recall_On_Timecards__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Config is used to control the display recall link on each submitted timecard. On click it, a recall overlay will be open, where we need to enter the comment and recall the approval request for timecard.</description>
        <inlineHelpText>Config is used to control the display recall link on each submitted timecard. On click it, a recall overlay will be open, where we need to enter the comment and recall the approval request for timecard.</inlineHelpText>
        <label>Show Recall On Timecards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Schedule_Grid_Expanded_By_Default__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checked, means schedule grid will be shown expanded on Timecard entry by default.</description>
        <inlineHelpText>Checked, means schedule grid will be shown expanded on Timecard entry by default.</inlineHelpText>
        <label>Show Schedule Grid Expanded By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Travel__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the Travel checkboxes on the new timecard UI are to be displayed. The default value is true.</description>
        <inlineHelpText>Indicates whether the Travel checkboxes on the new timecard UI are to be displayed. The default value is true.</inlineHelpText>
        <label>Show Travel</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>